--- a/Chapter_04.tex
+++ b/Chapter_04.tex
@@ -277,7 +277,7 @@ In fact, in general it holds that if the safety preconditions for an action are 
 \end{tcolorbox}
 This indicates that negative introspection about safety preconditions is a desirable safety property to maintain, consistent with the official report's criticism that the Airbus cockpit system did not clearly display the safety critical information. The logic described in this research accurately models the report's findings that the pilot's lack of awareness about safety-critical information played a key role in his decision to provide unsafe inputs. Furthermore, the logic supports efforts to automatically infer which safety-critical information the pilot is unaware of and effectively display it to him. 
 
-The next section formalizes additional case studies in DASL.
+The next section formalizes additional case studies in \DASL.
 
 \section{Additional Case Studies}
 \noindent
