wip: lob section

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -16,6 +16,9 @@
 	 	\bibitem{AhrenbachGoodloe}
 	 	Ahrenbach, S.; Goodloe, A. Formal Analysis of Pilot Error Using Agent Safety Logic. {\em Innovations in Systems and Software Engineering}. {\bf Submitted}.
 	 	
+	 	\bibitem{modal_prisoner}
+	 	Barasz, M.; Christiano, P.; Fallenstein, B.; Herreshoff, M.; LaVictoire, P.; Yudkowsky, E. ``Robust Cooperation in the Prisoner's Dilemma: Program Equilibrium via Provability Logic", https://arxiv.org/abs/1401.5577v1 Accessed 7/9/19.
+	 	
 	 	\bibitem{bolton2013using}
 	 	Bolton, M.; Bass, E.; Siminiceanu, R. Using formal verification to evaluate human-automation interaction: A review. \emph{Systems, Man, and Cybernetics: Systems, IEEE Transactions on} (Vol 43, No. 5, pp.488-503). 2013. IEEE.
 	 	
@@ -39,17 +42,28 @@
 	 	\bibitem{Gettier}
 	 	Gettier, E. Is Justified True Belief Knowledge? {\em Analysis} (Vol. 23, pp. 121-123). 1963.
 	 	
+	 	\bibitem{fallensteinSoares}
+	 	Fallenstein, B. Soares, N. ``Problems of self-reference in self-improving space-time embedded intelligence." {\em Lecture Notes in Artificial Intelligence 8598}, pages 21–32. Springer, 2014.
+	 	
+	 	
+	 	\bibitem{godel}
+	 	 Gödel, K. "Über Formal Unentscheidbare Sätze der Principia Mathematica und Verwandter Systeme, I." Monatshefte für Math. u. Physik 38, 173-198, 1931. 
+	 	 
 	 	\bibitem{modal} Blackburn, P.; de Rijke, M.; Venema, Y. Modal Logic. Cambridge University Press. New York, 2001.
 	 	\bibitem{PAL} Baltag, A.; Moss, L.; Solecki, S. "The logic of public announcements, common knowledge, and private suspicions." Readings in Formal Epistemology. Springer International Publishing, 2016. 773-812.
 	 	\bibitem{RAK} Fagin, R.; Halpern J.; Moses, Y.; Vardi, M. Reasoning about knowledge. MIT press, 2004.
 	 	\bibitem{MHE} Basin, D., Radomirovic, S. and Schmid, L., Modeling Human Errors in Security Protocols.
 	 	\bibitem{ButlerModeConfusion} Butler, R.W., Miller, S.P., Potts, J.N. and Carreno, V.A., 1998. A formal methods approach to the analysis of mode confusion. In Digital Avionics Systems Conference, 1998. Proceedings., 17th DASC. The AIAA/IEEE/SAE (Vol. 1, pp. C41-1). IEEE.
 	 	
+	 	
 	 	\bibitem{Hoare}
 	 	Hoare, C. A. R. "An axiomatic basis for computer programming." \emph{Communications of the ACM} 12 (10): 576-583. (1969).
 	 	
 	 	\bibitem{johnson_butler_fm}
 	 	Butler, R.; Johnson, S. Formal Methods For Life-Critical Software. \emph{Computing in Aerospace 9 Conference}, (pp. 319-329), San Diego, CA. October 1993.
+	 	
+	 	\bibitem{MIRIPD}
+	 	LaVictoire, P.; Fallenstein, B.; Yudkowsky, E.; Barasz, M.; Christiano, P.; Herreshoff, M. ``Program  equilibrium  in  the  prisoner’s  dilemma  via L\"ob’s Theorem." {\em Multiagent Interaction without Prior Coordination: Papers from the AAAI-14 Workshop.} AAAI Publications, 2014.
 	 	
 	 	\bibitem{Lob}
 	 	L\"ob, M. Solution of a Problem of Leon Henkin. {\em Journal of Symbolic Logic} 20 (2), 115 - 118. (1955).
@@ -216,4 +230,7 @@
 	 	
 	 	\bibitem{Wittgenstein}
 	 	Wittgeinstein, L. ``Philosophical Investigations." Blackwell Publishers. 1953.
+	 	
+		\bibitem{yudkowski}
+		Yudkowski, E.; Hereshoff, M. ``Tiling Agents for Self-Modifying AI, and the L\"obian Obstacle." https://intelligence.org/files/TilingAgentsDraft.pdf, 2013.	 	
 \end{thebibliography}
