--- a/Chapter_05a.tex
+++ b/Chapter_05a.tex
@@ -69,7 +69,34 @@ The L\"ob Sentence is sometimes not mentioned as a Condition, because L\"ob's Th
 
 Finally, we note the importance of L\"ob's Theorem's antecedent: $\Box(\Box\varphi \iimplies \varphi)$. Epistemic logics typically include the antecedent as a theorem, in which case L\"ob's Theorem will allow us to derive $\Box\varphi$ for all $\varphi$. This is why consistent mathematical systems at least as expressive as Peano arithmetic cannot prove their own consistency. 
 
-We identify some candidate epistemic logics and, on the assumption that they capture human-like reasoning, show how they crash into L\"ob's Obstacle.
+In what follows, we summarize the problems this theorem presents to formal agency modeling in general, and a unique potential benefit it affords in game theory due to LaVictoire \etal in \cite{MIRIPD}. Next, we round up the usual suspects of epistemic-doxastic logic and show that, on the assumption that they aim to capture human-like reasoning, they crash into L\"ob's Obstacle. Unfortunately, \DASL\ itself suffers from L\"ob's Obstacle, and so we provide a weakened static base suitable for agents capable of self-reflective reasoning. It sustains the contraposed game theoretic inference we sought out to model for realistic agents.
+
+\section{Discussion on L\"ob's Obstacle}
+\label{sec:lob_discussion}
+
+L\"ob's Obstacle has its origin in mathematical logic, where it was shown to prevent Peano arithmetic from proving its own soundness. Among modal logicians of a philosophical bent, mathematical logic, and its provability logic cousin, have received much less interest than epistemic, temporal, and deontic logics. Among modal logicians interested in technical aspects of logic, L\"ob's Theorem has received interest insofar as it relates to fixpoints. One exception is Raymond Smullyan in \cite{smullyan}, where he examined the parallels between Peano Arithmetic$^+$\footnote{We use this to refer to any system at least as expressive as PA.} proving statements about itself and logicians deducing beliefs about themselves. In it, he points out that reasoners with certain powers will risk deviating into an inconsistent set of beliefs, due to self-reflection. The cited paper appeared as a curiosity of sorts, presenting a series of recreational logic puzzles or riddles, with corresponding solutions following. 
+
+More recently, researchers in formal agent modeling have become interested in this particular logic puzzle of Smullyan's. When the logician reasoning about itself is an artificial intelligence, the puzzle becomes a unique safety problem. In \cite{yudkowski}, Yudkowski and Herreshoff consider an AI of sufficient reasoning power (PA$^+$), and show by straightforward application of L\"ob's Theorem that such an agent can neither trust its own conclusions in general, nor assent to its, we would say \emph{in fact}, correct reasoning principles. The alternative to this is an inconsistent agent.
+
+According to Yudkowski and Herreshoff, the AI ``cannot say, `I don’t know if $\varphi$ is true, but I trust that if any proof exists from my axioms of $\varphi$, then $\varphi$ must be true.' Instead [the AI] can only react to particular proofs of $\varphi$ by asserting $\varphi$. This presents an apparent paradox of rational coherence$\dots$ the agent will believe any proof of $\varphi$ you present to it, but will refuse to assent to `I ought to believe any proof of $\varphi$ I am presented with,' a seeming defect of reflectivity $-$ the agent cannot approve, under reflection, its own behavioral principles." 
+
+The safety problem is an instance of $\varphi$ in the previous paragraph. One can substitute any safety property in for $\varphi$ that a future AI ought to abide by. We can ignore problems of humans correctly encoding the safety property, and focus on the AI assessing actions under the constraint of $\varphi$. We assume some such actions will be of the meta variety, where it must decide whether to $a)$ modify itself, $b)$ create a copy of itself, or $c)$ produce offspring AI. Any such meta type action causes it to confront a sentence of the form, ``[meta type action $\laa$] does not violate $\varphi$." If the AI is producing strictly weaker reasoning systems as offspring or self-modifications, it can safely infer that the sentence is true\cite{yudkowski}. This can produce a descending chain of systems culminating in PA. However, for self-copies and non-weakening self-modifications, the AI cannot infer the above sentence without risking inconsistency.
+
+Perhaps for the short-term, this problem can be avoided due to the fact that powerful AI programs tend to be \emph{narrow}, or focused on a particular problem domain. So long as AI programs tend to be narrow, formal methods researchers may be able to specify safety properties and develop techniques for mechanically checking whether they hold. However, there are three reasons to be skeptical of this optimistic claim.
+
+First, this avoids the technical problem by assuming it will not arise, not by solving it. Given a technical scenario with potentially unsafe consequences, proper safety engineering requires examination of worst case scenarios and engaging with them.
+
+Second, one instance of narrow AI is a program focused on constructing software. This scenario seems highly likely to occur in the relatively near future, as more technology development abstracts away from and automates various levels of configuration and compilation. Such automation trends toward a program that takes as input a computational problem and attempts to construct a program that solves it. Due to the Curry-Howard Correspondence between proofs and programs, this type of program in fact already exists in the form of automated theorem provers. Should these programs continue to advance to a point where they are constructing other programming engines, the problem of L\"ob's Obstacle immediately arises, even for narrow AI.
+
+Finally, organizations are already actively working to develop artificial \emph{general} intelligence, defined as an AI capable of solving problems from any domain at least as well as a human. A company which has made numerous headlines for its recent successes is DeepMind, a subsidiary of Alphabet, which states that its mission is, ``We’re on a scientific mission to push the boundaries of AI, developing programs that can learn to solve any complex problem without needing to be taught how."\footnote{https://deepmind.com/about/ Accessed 7/9/19.} With a strong economic incentive to achieve artificial general intelligence, it is not unreasonable to engage with the safety concerns that arise from it \emph{prior} to its successful creation.
+
+The consequences of L\"ob's Theorem for AI safety are as follows. First, ignoring chains of descendingly weaker systems, AI cannot safely be in the AI programming business. There is a sort of mathematical gravity that pulls a system toward L\"ob's Obstacle, as it places two clear desiderata in conflict with one another. On the one hand, we seek agents with (near-) perfect \emph{external} accuracy, with beliefs that are justifiedly true of the world. On the other hand, we seek agents with (near-) perfect \emph{internal} accuracy, with powerful introspective access to their own internal states. Combining these desiderata yields an \SFive\ modality, and indeed, the ideally rational agent is one with \SFive\ epistemic modality. Aumann's formalization of the ideally rational agents of game theory and economics is the \SFive\ modal operator in \cite{Aumann}. His was not an arbitrary formalization, but rather one that made explicit assumptions that mathematical models in those domains make about agents. Thus, there is a tendency, in constructing artificial agents, to build toward that. Such agents have the powerful positive and negative introspection properties, and the axiom that knowledge implies truth.
+
+However, constructing such an agent capable of reasoning about PA$^{+}$ is guaranteed to eventually decay into inconsistency, by L\"ob's Theorem, as pointed out by Smullyan. Such agents satisfy the antecedent of L\"ob's Theorem, and are able to deduce L\"ob's Theorem itself, and therefore conclude that they know any arbitrary formula. The problematic case here is not that the AI will come to believe that apples are blue, but rather that producing a next generation AI$^+$ is provably safe, when this is not the case.
+
+As this problem relates to the goal of this thesis, which is to describe a logic of agency for human-like agents, we examine some static epistemic logics that crash into L\"ob's Obstacle.
+
+
 
 \section{Epistemic Logics that Crash}
 \label{sec:crashing_logics}
@@ -80,7 +107,7 @@ The most prominent epistemic logic in the literature, by far, is \SFive\ epistem
 \Kns{i}\varphi \iimplies \varphi\\
 \tlnot\Kns{i}\varphi \iimplies \Kns{i}\tlnot\Kns{i}\varphi
 \end{eqnarray}
-Clearly (2) is Axiom K, and (3), troublingly, is the antecedent of L\"ob's Theorem, known as Axiom T. (4) is called the Negative Introspection axiom, or sometimes in philosophy circles, the Wisdom Axiom. Logicians call it Axiom 5. It is read, ``If $i$ does not know that $\varphi$, then she knows that she doesn't know it". Other than being clearly invalid for humans, this axiom and (3) allows us to derive,
+Clearly (5.2) is Axiom K, and (5.3), troublingly, combines with the Rule of Necessitation to produce the antecedent of L\"ob's Theorem. (5.4) is called the Negative Introspection axiom, or sometimes in philosophy circles, the Wisdom Axiom. Logicians call it Axiom 5. It is read, ``If $i$ does not know that $\varphi$, then she knows that she doesn't know it". Other than being clearly invalid for humans, this axiom and (3) allows us to derive,
 \begin{equation*}
 \Kns{i}\varphi \iimplies \Kns{i}\Kns{i}\varphi
 \end{equation*}
@@ -107,10 +134,10 @@ We take this as a \emph{reductio ad absurdum} that \SFive\ epistemic logic canno
 \label{sec:hint_s4}
 In Hintikka's 1967 \emph{Knowledge and Belief: A logic of the two notions}, he presented an epistemic logic for determining the validity and consistency of claims people make about knowledge and belief. He rejected out of hand the negative introspection axiom for knowledge, but chose to include positive introspection, which is formalized as $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$. Clearly then, if Hintikka's epistemic system is meant for human-like reasoners who can express sentences like, ``If I know this sentence is true, then 1 + 1 = 2," then it crashes into L\"ob's Obstacle, with the extra bite of having the antecedent of L\"ob's Theorem as a theorem itself, and therefore, $\Kns{i}\varphi$ is also a theorem.
 
-\subsection{Kraus and Lehman System}
+\subsection{Kraus and Lehmann System}
 \label{sec:kl}
 
-In \cite{KrausLehman}, Kraus and Lehman tackle the issue of how to combine knowledge and belief in a single system remarked on in the conclusion of Halpern and Moses in \cite{HalpernMoses}. The project at the time was very similar to that addressed by this dissertation's static foundation: the development of a logic sufficiently realistic and expressive for reasoning about intelligent agents. 
+In \cite{KrausLehmann}, Kraus and Lehmann tackle the issue of how to combine knowledge and belief in a single system remarked on in the conclusion of Halpern and Moses in \cite{HalpernMoses}. The project at the time was very similar to that addressed by this dissertation's static foundation: the development of a logic sufficiently realistic and expressive for reasoning about intelligent agents. 
 
 They axiomatize knowledge and belief as follows.
 
@@ -132,13 +159,13 @@ They axiomatize knowledge and belief as follows.
 			From $\vdash \varphi$, infer $\vdash \Kns{i}\varphi$ & Necessitation of $\Kns{i}$\\
 			\hline
 		\end{tabular}
-		\caption{Logic of Kraus and Lehman}~\label{KL}
+		\caption{Logic of Kraus and Lehmann}~\label{KL}
 	\end{center}
 \end{table}
 
 The key differences with \DASL\ are that knowledge is \SFive\ and the axiom of Conscious Belief, which reverses the composition of knowledge and belief under belief relative to \DASL's Evidential Restraint axiom. From the above axiom schemas, it follows that belief is a regular $\mathcal{KD}45$ operator.
 
-In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show that $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$ is a theorem. Therefore, this system suffers from a particularly bad collision with L\"ob: Both the knowledge and belief modalities lead to inconsistency for intelligent agenst capable of self-referential reasoning. 
+In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show that $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$ is a theorem. Therefore, this system suffers from a particularly bad collision with L\"ob: Both the knowledge and belief modalities lead to inconsistency for intelligent agents capable of self-referential reasoning. 
 
 \section{\DASL}
 \label{sec:crap}
@@ -152,7 +179,7 @@ In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show th
 			$\Bels{i}(\varphi \iimplies \psi) \iimplies (\Bels{i}\varphi \iimplies \Bels{i}\psi)$ & Distribution of $\Bels{i}$\\
 			$\Bels{i}\varphi \iimplies \BPoss{i}\varphi$ & Belief Consistency \\
 			%		$\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$ & Positive Belief Introspection \\
-			%		$\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
+			$\tlnot\Bels{i}\varphi \iimplies \Bels{i}\tlnot\Bels{i}\varphi$ & Negative Belief Introspection\\
 			$\Kns{i}\varphi \iimplies \Bels{i}\varphi$ & Knowledge implies Belief \\
 			$\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$ & Evidential Restraint\\
 			%			$\Bels{i}\varphi \iimplies \Kns{i}\Bels{i}\varphi$ & Beliefs are Known\\
@@ -160,12 +187,12 @@ In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show th
 			From $\vdash \varphi$, infer $\vdash \Kns{i}\varphi$ & Necessitation of $\Kns{i}$\\
 			\hline
 		\end{tabular}
-		\caption{Logic of \DASL}~\label{GC_agent}
+		\caption{Logic of \DASL}~\label{DASL-static}
 	\end{center}
 \end{table}
 
-%
-%The operators in this logic are reduced in power relative to other logics of knowledge and belief. Here, knowledge is true, belief is consistent, knowledge implies belief, beliefs are subjectively justified, and both operators are normal modal operators. Knowledge lacks both epistemic introspection properties, while belief has positive introspection. As with all normal epistemic operators, these suffer from the problem of logical omniscience, which this paper does not attempt to solve. Rather, we shall show that in the instance of knowledge, the L\"obian Obstacle is avoided. The positive introspection property of belief is a theorem, however, so L\"ob's Theorem will be derivable for the belief operator.
+Recall that in \DASL's static logic, knowledge lacks both epistemic introspection properties, while belief has negative introspection and positive introspection. The modalities are combined via the Knowledge implies Belief Axiom and the Evidential Restraint Axiom. L\"ob's Theorem is derivable for the belief operator. We first show that the two composite axiom schemas are sufficient to derive positive introspection for belief.
+
 \begin{theorem}[Positive Belief Introspection]~\label{belief_posint}
 	$\Bels{i}\varphi \iimplies \Bels{i}\Bels{i}\varphi$
 \end{theorem}
@@ -178,33 +205,7 @@ In their article, and in Meyer and van der Hoek's \cite{MeyerHoek}, they show th
 	\end{proofenum}
 \end{proof}\mbox{}\hfill $\mathcal{QED}$
 
-The logic defined by these axiom schemas and inference rules avoids L\"ob's Obstacle for $\Kns{i}$, as it is no longer has the positive introspection property.
-
-\begin{figure}[H]
-	\begin{center}
-		\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=3cm,
-		thick,base node/.style={circle,draw,minimum size=35pt}]
-		
-		\node[base node] (w) {\begin{tabular}{c}
-			$w:  p$ \\ $\Kns{i}p$ \\ $\tlnot\Kns{i}\Kns{i}p$
-			\end{tabular}};
-		\node[base node] (v) [right of=w] {\begin{tabular}{c}
-			$v:  p$ \\ $\tlnot\Kns{i}p $
-			\end{tabular}};
-		\node[base node] (u) [right of=v] {$u: \tlnot p$};
-		\path[]
-		(w) edge node[above] {$\Rel{k}^i$} (v)
-		edge [loop left] node {$\Rel{k}^i$} (w)
-		(v) 
-		%		edge node[below] {} (w)
-		%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
-		edge [<-, loop above] node {$\Rel{k}^i$} (v)
-		edge node[above] {$\Rel{k}^i$} (u)
-		(u)  edge [<-, loop right] node {$\Rel{k}^i$} (u);
-		\end{tikzpicture}
-	\end{center}
-	\caption{A counterexample to $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$.}
-\end{figure}
+With the three L\"ob Conditions (Axiom K, Axiom 4, and the Rule of Necessitation) satisfied for $\Bels{i}$, L\"ob's Theorem holds for belief. 
 %
 %This logic also avoids the disaster of L\"ob's Theorem for belief, because $\Bels{i}(\Bels{i}\varphi \iimplies \varphi)$ is no longer a theorem.
 %
@@ -244,18 +245,18 @@ The logic defined by these axiom schemas and inference rules avoids L\"ob's Obst
 %Recall that the contrapositive of the Knowledge implies Belief axiom is $\BPoss{i}\varphi \iimplies \Poss{i}\varphi$. Our interpretation reads this as, ``$i$ considers $\varphi$ to be possible only if she has evidence that $\varphi$."  This may not be valid for how humans \emph{in fact} form beliefs, but it provides a normative dimension to the logic and some modest level of idealization. The agent's modeled by this logic are human-like, and maybe some particular humans actually abide by these axioms. We call these agents Grounded-Coherent agents, because their beliefs are grounded in evidence, and coherent because they avoid L\"ob's Obstacle.
 %
 %The belief operator narrowly avoids L\"ob's Obstacle. 
-Doxastic logic typically includes as an axiom of Belief Consistency, which corresponds to a serial doxastic possibility relation. Crucially, this axiom $\Bels{i}\varphi\iimplies\BPoss{i}\varphi$ is equivalent to $\tlnot(\Bels{i}\varphi \tland \Bels{i}\tlnot\varphi)$, which is furthmore equivalent to $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$, which results in a disaster.
+The Belief Consistency Axiom $\Bels{i}\varphi\iimplies\BPoss{i}\varphi$ is equivalent to $\tlnot(\Bels{i}\varphi \tland \Bels{i}\tlnot\varphi)$, which is furthmore equivalent to $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$, which results in the following disaster.
 
 \begin{theorem}[Consistency Disaster]~\label{no_bel_cons}
-	If $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$ and\\ $\Bels{i}(\Bels{i}\varphi \iimplies\varphi)\iimplies \Bels{i}\varphi$ are theorems, then $\Bels{i}(\varphi \tland \tlnot \varphi)$.
+	If $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$ and\\ $\Bels{i}(\Bels{i}\varphi \iimplies\varphi)\iimplies \Bels{i}\varphi$ are theorems, then $\Bels{i}(\varphi \tland \tlnot \varphi)$ is a theorem.
 \end{theorem}
 \begin{proof}$\\$
 \begin{proofenum}
 		\item $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$\mbox{}\hfill Belief is Consistent
-		\item $\Bels{i}(\varphi\tland\tlnot\varphi)\iimplies (\varphi \tland \tlnot \varphi)$\mbox{}\hfill (3.1)
+		\item $\Bels{i}(\varphi\tland\tlnot\varphi)\iimplies (\varphi \tland \tlnot \varphi)$\mbox{}\hfill (4.1)
 		\item $\Bels{i}(\Bels{i}(\varphi \tland \tlnot \varphi)\iimplies (\varphi \tland \tlnot \varphi))$\mbox{}\hfill Necessitation of $\Bels{i}$
 		\item $\Bels{i}(\Bels{i}(\varphi \tland \tlnot \varphi) \iimplies (\varphi \tland \tlnot \varphi))\iimplies \Bels{i}(\varphi \tland \tlnot \varphi)$\mbox{}\hfill L\"ob's Theorem
-		\item $\Bels{i}(\varphi \tland \tlnot \varphi)$\mbox{}\hfill (3.3), (3.4)
+		\item $\Bels{i}(\varphi \tland \tlnot \varphi)$\mbox{}\hfill (4.3), (4.4)
 	\end{proofenum}
 \end{proof}
 
@@ -269,15 +270,48 @@ Thus, with Belief Consistency, L\"ob's Theorem, and Theorem \ref{no_bel_cons}, i
 	This follows from Theorem \ref{no_bel_cons} and $\tlnot\Bels{i}(\varphi \tland \tlnot \varphi)$.
 \end{proof}\mbox{}\hfill $\mathcal{QED}$
 
-Therefore, the logic is inconsistent. Our only recourse, if we allow self-reference, is to severely relax the axiom schemas.
+Note the similarity here to the problem facing PA$^+$ were it to prove its own consistency, due to G\"odel's Second Incompleteness Theorem.\cite{godel}
 
+We briefly note that the logic defined by these axiom schemas and inference rules avoids L\"ob's Obstacle for $\Kns{i}$, as it is no longer has the positive introspection property.
+
+\begin{figure}[H]
+	\begin{center}
+		\begin{tikzpicture}[->,>=stealth',shorten >=1pt,auto,node distance=3cm,
+		thick,base node/.style={circle,draw,minimum size=35pt}]
+		
+		\node[base node] (w) {\begin{tabular}{c}
+			$w:  p$ \\ $\Kns{i}p$ \\ $\tlnot\Kns{i}\Kns{i}p$
+			\end{tabular}};
+		\node[base node] (v) [right of=w] {\begin{tabular}{c}
+			$v:  p$ \\ $\tlnot\Kns{i}p $
+			\end{tabular}};
+		\node[base node] (u) [right of=v] {$u: \tlnot p$};
+		\path[]
+		(w) edge node[above] {$\Rel{k}^i$} (v)
+		edge [loop left] node {$\Rel{k,b}^i$} (w)
+		(v) 
+		%		edge node[below] {} (w)
+		%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
+		edge [<-, loop above] node {$\Rel{k}^i$} (v)
+		edge node[above] {$\Rel{k}^i$} (u)
+		(u)  edge [<-, loop right] node {$\Rel{k}^i$} (u);
+		\end{tikzpicture}
+	\end{center}
+	\caption{A counterexample to $\Kns{i}\varphi\iimplies\Kns{i}\Kns{i}\varphi$.}
+\end{figure}
+
+Absent one of the three L\"ob Conditions, L\"ob's Theorem cannot be derived. Thus, we can say that the $\Kns{i}$ operator is L\"ob-safe, which is to say that the modal logic System T is L\"ob-safe. However, System T on its own is not adequate to model the knowledge and belief of human-like agents. 
 %However, so long as it is merely not the case that $i$ believes $\varphi$ and that she believes $\tlnot \varphi$, we avoid disaster. It is worth exploring the cost of avoiding L\"ob's Obstacle. Does this epistemic logic still characterize something resembling a realistic logic of human-like knowledge? It still suffers from the problem of logical omniscience, for both knowledge and belief. This is unavoidable for a normal modal logic. It maintains the critical axiom that knowledge is true. 
 
-One might wonder whether it would be acceptable to abandon the Truth Axiom for knowledge and allow L\"ob's Theorem to hold for the knowledge operator. This would introduce more modesty to the notion of knowledge, where a human-like agent knows that her knowledge is true only for those propositions that she actually knows, but not in the general sense. What would this mean for epistemology? A false proposition would no longer imply a lack of knowledge. It is an unfamiliar notion, perhaps worth exploring. Relaxing the Truth Axiom allows positive and negative introspection to live harmoniously with self-reference. We leave this for future work to explore.
+One might wonder whether it would be acceptable to abandon the Truth Axiom for knowledge and allow L\"ob's Theorem to hold for the knowledge operator in a way that avoids inconsistency. This would introduce more modesty to the notion of knowledge, where a human-like agent knows that her knowledge is true only for those propositions that she actually knows, but not in the general sense.\footnote{Smullyan referred to such agents as modest agents, for they are confident in the accuracy only of particular beliefs that they have good reasons (proofs) for, but lack a general confidence in their own beliefs.} 
+
+What would this mean for epistemology? A false proposition would no longer imply a lack of knowledge, and the rejection of the truth axiom goes against the entire history of Western philosophical thought. This is to say, it would require robust philosophical defense, which we are not prepared to give here. Relaxing the Truth Axiom allows positive and negative introspection to live harmoniously with self-reference. We leave this for future work to explore. We note here, however, that work by Barasz \etal in \cite{modal_prisoner} show that agents with L\"ob's Theorem holding for their epistemic operators are able to cooperate in the Prisoner's Dilemma game.\footnote{Specifically, they are programs capable of inspecting their own source code.} Related research in formal agent modeling via programs that play games with each other and can examine each other's source code has been explored by Binmore, Howard, McAfee, Tennenholtz, and other game theorists.
+
+Rather than pursuing that route, we relax our axiom schema so as to avoid the derivation of L\"ob's Theorem entirely, while maintaining the same or similar realism sought by the original \DASL\ static schemas.
 
 \section{Avoiding L\"ob}
 \label{sec:avoiding_lob}
-We leave the reader with the following logic that avoids the L\"obian Obstacle while retaining the inference of safety-critical information that is missing.
+We leave the reader with the following logic that avoids the L\"obian Obstacle while retaining the inference from unsafe action to information about missing knowledge, the useful and interesting contrapositive to the standard game theoretic inference mentioned at the beginning of this thesis.
 
 \begin{table}[H]
 	\begin{center}
